@@ -1,6 +1,9 @@
 Change Notes
 =============
 
+2009-10-14 RPF
+	- Added "extraClickInformation" on TotalNavigationProvider
+
 2009-08-26 RPF
 	- Added "ValueFormat from Measure first" priority in DefaultDimensionDataProvider.
 	  If there is none, the ValueFormat from the model is taken instead
